# rm3_ros_packages

./: .gitignore  LICENSE  README.md  package.xml  setup.cfg  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: comms_test.launch.py  single_motor.launch.py
launch/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
launch/log/: latest_build
log/: latest_build
robominer_bringup/: package.xml  setup.cfg  setup.py
robominer_bringup/config/: arduino_serial_nums.yaml
robominer_bringup/launch/: bag_record.launch.py  belgium_bag_record.launch.py  imu_and_whiskers.launch.py  joypad.launch.py  lidar_sick_s300.launch.py  localization_with_kalman_filtering.launch.py  microstrain_imu.launch.py  model_identification_record.launch.py  open_loop_dynamics_steering_w_sensors.launch.py  open_loop_kinematics_steering_w_sensors.launch.py  open_loop_steering.launch.py  open_loop_steering_imu_record.launch.py  (+4 more)
robominer_bt_bridge/: package.xml  setup.cfg  setup.py
robominer_drivers/: CMakeLists.txt  package.xml
robominer_drivers/BNO080/: BNO080_i2c.cpp  Example.cpp
robominer_drivers/MCP9808/: Example.sh
robominer_drivers/include/: .goutputstream-87A020  BNO080_i2c.h  BNO080_imu.h  BusInterface.h  Olimexino.h  RegMask.h  SparkFun_BNO080.h  Tlv493d.h  Tlv493d_conf.h  Whiskers_MUX_node.h  Wire.h  config.h  pi_wms_node.hpp
robominer_drivers/launch/: four_motor_modules.launch.py  old_module_com_id.launch.py  pi48.launch.py  right_module_com_id.launch.py  single_motor.launch.py  single_motor_com_id.launch.py  two_unos_com_id.launch.py  whiskers_launch.py
robominer_drivers/scripts/: motor_serial_interface.py  pi48_interface.py  temperature_sensor.py
robominer_drivers/src/: BNO080_Several_NoInterrupt.cpp  BNO080_i2c.cpp  BNO080_imu.cpp  Example.cpp  Whiskers_MUX.h  Whiskers_MUX_node.cpp  Whiskers_MUX_node_new.cpp  Whiskers_MUX_publisher.cpp  pi_wms_node.cpp
robominer_drivers/src/arduino_to_olimex/: Olimexino.cpp  Wire.cpp
robominer_drivers/src/bno080_lib/src/: SparkFun_BNO080.cpp
robominer_drivers/src/olimex/: Wire.cpp  config.h
robominer_drivers/src/src/: Tlv493d.cpp
robominer_drivers/src/tlv493d_lib/: Tlv493d.cpp
robominer_locomotion_control/: package.xml  setup.cfg  setup.py
robominer_msgs/: CMakeLists.txt  package.xml  robominer_bridge_mapping.yaml
robominer_sensors/: package.xml  setup.cfg  setup.py
robominer_state_estimation/: package.xml  setup.cfg  setup.py
robominers_serial_interface/: package.xml  setup.cfg  setup.py
rosbag2_2021_04_22-14_47_24/: metadata.yaml  rosbag2_2021_04_22-14_47_24_0.db3
steering/: package.xml  setup.cfg  setup.py
test_python_package/: serial_interface.py
(+81 files in other folders)
